# image-demo-sdl

./: .gitignore  CMakeLists.txt  demo-sdl.cbp  demo-sdl.depend  global_header.c  global_header.h  highgui.c  highgui.h  imgproc.c  imgproc.h  main.c
